--- a/index.html
+++ b/index.html
@@ -16,30 +16,27 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="#"></a>
+                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon" style="width: 45px;"></span>
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="" style="width: 100%;">
                             <div class="row">
-
                                 <div class="col centerJ">
-                                    <div class="row evenJ" style="width: 700px; padding-top: 40px;">
-                                        <div class="accordion accordion-flush" id="accordionFlushExample"
-                                            style="width: 100px;">
+                                    <div class="row evenJ navRowJ">
+                                        <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
                                             <div class="accordion-item"
-                                                style="width: 100px; background-color: rgba(255, 255, 255, 0); outline: none;">
-                                                <h2 class="accordion-header">
+                                                style=" background-color: rgba(255, 255, 255, 0); outline: none;">
+                                                
                                                     <button class="btn navLinksJ nav-link" type="button"
                                                         data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
-                                                        aria-expanded="false" aria-controls="flush-collapseOne"
-                                                        style="background-color: rgba(255, 255, 255, 0); padding-bottom: 20px; padding-top: 0px;">
-                                                        <p class="yellowJ" style="font-weight: 400;">Menu</p>
+                                                        aria-expanded="false" aria-controls="flush-collapseOne">
+                                                        <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
                                                     </button>
-                                                </h2>
+                                                
                                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                                     data-bs-parent="#accordionFlushExample">
                                                     <div class="accordion-body blackBg"><a
@@ -51,27 +48,24 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 150px;"
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
                                             href="./pages/ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;"
-                                            aria-current="page" href="./pages/AboutUs.html">About
-                                            Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ aboutNavJ" aria-current="page"
+                                            href="./pages/AboutUs.html">About Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ banhMiNavJ"
                                             href="./pages/BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
 
-                                <div class="col-1 centerJ">
+                                <div class="col-1 centerJ disappearJ">
                                     <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
                                             alt=""></a>
                                 </div>
-                                <div class="col yugiJ alignCenterJ">
+                                <div class="col yugiJ alignCenterJ disappearJ">
                                     <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
                                         Smothies</h1>
                                 </div>
-
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -96,13 +90,13 @@
         </div>
     </div>
 
-    <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ" style="width: 1040px;">"A banh mi a day keeps the hunger away"
+    <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ disappearJ" style="width: 1040px;">"A banh mi a day keeps the hunger away"
     </h1>
 
     <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu</button></a>
 
     <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 100px;">
-        <div class="row">
+        <div class="row disappearJ">
             <div class="col-4 ">
                 <div class="row centerJ">
                     <img class="infoLogoSizeJ" src="./assets/open-sign.png" alt="">
@@ -155,25 +149,25 @@
     <div class="container-fluid menuPaddingJ">
         <div class="row homePageMargin">
             <div class="col">
-                <h2 class="whiteJ abrilFatfaceJ cuisineJ">Vietnamese Cuisine</h2>
+                <h2 class="whiteJ abrilFatfaceJ cuisineJ disappearJ">Vietnamese Cuisine</h2>
             </div>
         </div>
         <div class="row homePageMargin">
             <div class="col-4">
                 <div class="row" style="margin-top: 5px">
-                    <h1 class="whiteJ abrilFatfaceJ" style="width: 300px; line-height: 57px;">Popular Sandwiches</h1>
+                    <h1 class="whiteJ abrilFatfaceJ disappearJ" style="width: 300px; line-height: 57px;">Popular Sandwiches</h1>
                 </div>
 
 
             </div>
-            <div class="col-8">
+            <div class="col-8 disappearJ">
                 <p id="menu" class="whiteJ foodInfoJ sansCollectionJ">At best sandwiches we offer the many sandwiches
                     that are apart of the Vietnamese
                     cuisine. Don’t be afraid to order yourself a sandwich and give it a try, because I guarantee that
                     you won’t regret it!. Down below are our top 5 popular sandwiches.</p>
             </div>
         </div>
-        <div class="row evenJ homePageMargin">
+        <div class="row evenJ homePageMargin disappearJ">
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard1.png" class="card-img-top" alt="...">
@@ -258,12 +252,12 @@
         <div class="row centerJ my-4">
             <button class="btn btn-primary" style="width: 250px;">View Sandwiches</button>
         </div>
-        <div class="row homePageMargin">
+        <div class="row homePageMargin disappearJ">
             <div class="col">
                 <h2 class="whiteJ abrilFatfaceJ cuisineJ">Asian Cuisine</h2>
             </div>
         </div>
-        <div class="row homePageMargin">
+        <div class="row homePageMargin disappearJ">
             <div class="col-4">
                 <div class="row" style="margin-top: 5px">
                     <h1 class="whiteJ abrilFatfaceJ" style="width: 300px; line-height: 57px;">Popular Drinks</h1>
@@ -278,7 +272,7 @@
                     options.</p>
             </div>
         </div>
-        <div class="row evenJ homePageMargin">
+        <div class="row evenJ homePageMargin disappearJ">
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard1.png" class="card-img-top" alt="...">
@@ -361,9 +355,9 @@
             </div>
         </div>
         <div class="row centerJ my-4">
-            <button class="btn btn-primary" style="width: 250px;">View Sandwiches</button>
+            <button class="btn btn-primary" style="width: 250px;">View Drinks</button>
         </div>
-        <div class="container-fluid reviewPaddingJ">
+        <div class="container-fluid reviewPaddingJ disappearJ">
             <div id="carouselExample" class="carousel slide bgWhiteJ">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -490,57 +484,95 @@
                 </button>
             </div>
         </div>
-        <hr class="yellowJ hrLineJ mt-4">
 
-        <div class="container-fluid footerPaddingJ">
-            <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
-                <div class="col-4" style="padding-left: 3%;">
-                    <div class="row yellowJ abrilFatfaceJ">
-                        <h2 class="footerFontSize3">Best Sandwiches</h2>
-                    </div>
-                    <div class="row yellowJ abrilFatfaceJ">
-                        <h2 class="footerFontSize3">& Smoothies</h2>
-                    </div>
+            <hr class="yellowJ hrLineJ hrMargin">
+
+    <div class="container-fluid footerPaddingJ disappearJ">
+        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+            <div class="col-4" style="padding-left: 3%;">
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">Best Sandwiches</h2>
                 </div>
-                <div class="col" style="padding-left: 2%;">
-                    <div class="row">
-                        <div class="col">
-                            <div class="row">
-                                <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-                                <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
-                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                            </div>
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">& Smoothies</h2>
+                </div>
+            </div>
+            <div class="col" style="padding-left: 2%;">
+                <div class="row">
+                    <div class="col">
+                        <div class="row sansCollectionJ">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                         </div>
+                    </div>
 
-                        <div class="col">
-                            <div class="row">
-                                <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                                <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                            </div>
+                    <div class="col">
+                        <div class="row sansCollectionJ">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                            <p class="yellowJ footerFontSize">
+                                <img src="../assets/phone symbol.png" alt="">
+                                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+                            </p>
+                            <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+                            <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
                         </div>
+                    </div>
 
-                        <div class="col">
-                            <div class="row">
-                                <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
-                            </div>
-                            <div class="row">
-                                <a class="footerIconsJ"
-                                    href="https://m.facebook.com/profile.php?id=111693338885516"><img class="img-fluid"
-                                        src="../assets/FACEBOOK.png" alt=""></a>
-                                <a class="footerIconsJ"
-                                    href="https://m.facebook.com/profile.php?id=111693338885516"><img class="img-fluid"
-                                        src="../assets/icons8-yelp-100.png" alt=""></a>
-                                <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
-                                        alt=""></a>
-                            </div>
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                        </div>
+                        <div class="row">
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                            </a>
+                            <a class="footerIconsJ"
+                                href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                            </a>
+                            <a class="footerIconsJ" href="../index.html">
+                                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
+        <div class="row">
+            <div class="col">
+                <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+                    <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+                    <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+                </p>
+                <p class="yellowJ footerFontSize" style="width: 115px;">
+                    3330 E Hammer Ln Ste C Stockton, CA 95212
+                </p>
+            </div>
+            <div class="col">
+                <div class="row rightJ">
+                    <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                        <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ"
+                        href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                        <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ" href="../index.html">
+                        <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                    </a>
+                </div>
+                <div class="row">
+                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+                        Smoothies</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
