--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -15,36 +15,54 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="#"></a>
+                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon" style="width: 45px;"></span>
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
-                        <div class="" style="width: 100%">
+                        <div class="" style="width: 100%;">
                             <div class="row">
                                 <div class="col centerJ">
-                                    <div class="row evenJ" style="width: 700px; padding-top: 40px">
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 75px" href="./Menu.html">Menu</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 125px" aria-current="page" href="./AboutUs.html">About Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 145px" href="./ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 120px" href="./BanhMi.html">Banh Mi?</a>
+                                    <div class="row evenJ navRowJ">
+                                        <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
+                                            <div class="accordion-item"
+                                                style=" background-color: rgba(255, 255, 255, 0); outline: none;">
+                                                
+                                                    <button class="btn navLinksJ nav-link" type="button"
+                                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                        aria-expanded="false" aria-controls="flush-collapseOne">
+                                                        <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
+                                                    </button>
+                                                
+                                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                                    data-bs-parent="#accordionFlushExample">
+                                                    <div class="accordion-body blackBg"><a
+                                                            class="nav-link navLinksJ yellowJ"
+                                                            href="./Menu.html">Food</a></div>
+                                                    <div class="accordion-body blackBg"><a
+                                                            class="nav-link navLinksJ yellowJ"
+                                                            href="./Drinks.html">Drinks</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
+                                            href="./ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ aboutNavJ" aria-current="page"
+                                            href="./AboutUs.html">About Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ banhMiNavJ"
+                                            href="./BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
 
-                                <div class="col-1 centerJ">
+                                <div class="col-1 centerJ disappearJ">
                                     <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
-                                            alt="" /></a>
+                                            alt=""></a>
                                 </div>
-                                <div class="col yugiJ alignCenterJ">
-                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">
-                                        Best Sandwiches & Smothies
-                                    </h1>
+                                <div class="col yugiJ alignCenterJ disappearJ">
+                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
+                                        Smothies</h1>
                                 </div>
                             </div>
                         </div>
@@ -210,7 +228,7 @@
 
 
 
-    <hr class="yellowJ hrLineJ mt-4">
+    <hr class="yellowJ hrLineJ hrMargin">
 
     <div class="container-fluid footerPaddingJ disappearJ">
         <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
@@ -253,7 +271,8 @@
                             <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
                                 <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
                             </a>
-                            <a class="footerIconsJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                            <a class="footerIconsJ"
+                                href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
                                 <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
                             </a>
                             <a class="footerIconsJ" href="../index.html">
@@ -282,7 +301,8 @@
                     <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
                         <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
                     </a>
-                    <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                    <a class="footerIconsMobileJ"
+                        href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
                         <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
                     </a>
                     <a class="footerIconsMobileJ" href="../index.html">
@@ -290,7 +310,8 @@
                     </a>
                 </div>
                 <div class="row">
-                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches & Smoothies</p>
+                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+                        Smoothies</p>
                 </div>
             </div>
         </div>
