--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -15,36 +15,54 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="#"></a>
+                    <a class="navbar-brand yellowJ" href="#"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon" style="width: 45px;"></span>
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
-                        <div class="" style="width: 100%">
+                        <div class="" style="width: 100%;">
                             <div class="row">
                                 <div class="col centerJ">
-                                    <div class="row evenJ" style="width: 700px; padding-top: 40px">
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 75px" href="./Menu.html">Menu</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 125px" aria-current="page" href="./AboutUs.html">About Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 145px" href="./ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
-                                            style="width: 120px" href="./BanhMi.html">Banh Mi?</a>
+                                    <div class="row evenJ navRowJ">
+                                        <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
+                                            <div class="accordion-item"
+                                                style=" background-color: rgba(255, 255, 255, 0); outline: none;">
+                                                
+                                                    <button class="btn navLinksJ nav-link" type="button"
+                                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                        aria-expanded="false" aria-controls="flush-collapseOne">
+                                                        <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
+                                                    </button>
+                                                
+                                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                                    data-bs-parent="#accordionFlushExample">
+                                                    <div class="accordion-body blackBg"><a
+                                                            class="nav-link navLinksJ yellowJ"
+                                                            href="./Menu.html">Food</a></div>
+                                                    <div class="accordion-body blackBg"><a
+                                                            class="nav-link navLinksJ yellowJ"
+                                                            href="./Drinks.html">Drinks</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
+                                            href="./ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ aboutNavJ" aria-current="page"
+                                            href="./AboutUs.html">About Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ banhMiNavJ"
+                                            href="./BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
 
-                                <div class="col-1 centerJ">
+                                <div class="col-1 centerJ disappearJ">
                                     <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
-                                            alt="" /></a>
+                                            alt=""></a>
                                 </div>
-                                <div class="col yugiJ alignCenterJ">
-                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">
-                                        Best Sandwiches & Smothies
-                                    </h1>
+                                <div class="col yugiJ alignCenterJ disappearJ">
+                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
+                                        Smothies</h1>
                                 </div>
                             </div>
                         </div>
@@ -76,11 +94,11 @@
         </div>
     </div>
 
-    <hr class="yellowJ hrLineJ mt-4" />
+    <hr class="yellowJ hrLineJ hrMargin">
 
-    <div class="container-fluid footerPaddingJ">
-        <div class="row" style="padding-top: 45px; padding-bottom: 20px">
-            <div class="col-4" style="padding-left: 3%">
+    <div class="container-fluid footerPaddingJ disappearJ">
+        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+            <div class="col-4" style="padding-left: 3%;">
                 <div class="row yellowJ abrilFatfaceJ">
                     <h2 class="footerFontSize3">Best Sandwiches</h2>
                 </div>
@@ -88,10 +106,10 @@
                     <h2 class="footerFontSize3">& Smoothies</h2>
                 </div>
             </div>
-            <div class="col" style="padding-left: 2%">
+            <div class="col" style="padding-left: 2%;">
                 <div class="row">
                     <div class="col">
-                        <div class="row">
+                        <div class="row sansCollectionJ">
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
                             <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
                             <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
@@ -100,11 +118,14 @@
                     </div>
 
                     <div class="col">
-                        <div class="row">
+                        <div class="row sansCollectionJ">
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+                            <p class="yellowJ footerFontSize">
+                                <img src="../assets/phone symbol.png" alt="">
+                                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+                            </p>
+                            <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+                            <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
                         </div>
                     </div>
 
@@ -113,14 +134,50 @@
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
                         </div>
                         <div class="row">
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/FACEBOOK.png" alt="" /></a>
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt="" /></a>
-                            <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
-                                    alt="" /></a>
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                            </a>
+                            <a class="footerIconsJ"
+                                href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                            </a>
+                            <a class="footerIconsJ" href="../index.html">
+                                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                            </a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
+        <div class="row">
+            <div class="col">
+                <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+                    <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+                    <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+                </p>
+                <p class="yellowJ footerFontSize" style="width: 115px;">
+                    3330 E Hammer Ln Ste C Stockton, CA 95212
+                </p>
+            </div>
+            <div class="col">
+                <div class="row rightJ">
+                    <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                        <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ"
+                        href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                        <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                    </a>
+                    <a class="footerIconsMobileJ" href="../index.html">
+                        <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                    </a>
+                </div>
+                <div class="row">
+                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+                        Smoothies</p>
                 </div>
             </div>
         </div>
